--- a/moneyapp/index.html
+++ b/moneyapp/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pt-br">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <meta name="description" content="O objetivo é construir uma aplicação que simula o envio de dinheiro para uma outra pessoa, via cartão de crédito.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="O objetivo é construir uma aplicação que simula o envio de dinheiro para uma outra pessoa, via cartão de crédito.">
   <title>App Envio de Dinheiro</title>
 </head>
 
